test/files/neg/classtags_contextbound_c.check
classtags_contextbound_c.scala:4: error: No ArrayTag available for T
  def mkArray[T] = Array[T]()
                           ^
one error found
